--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
     "nodemon": "^1.17.3",
